package com.banksystem.model;

public class Agence {
}
