package com.banksystem.model;

public class JournalAction {
}
