package com.banksystem.model;

public class Message {
}
