package com.banksystem.model;

public class Notification {
}
